--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://ilyesshamdaoui.github.io/L-yes-Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@react-pdf/renderer": "^2.3.0",
     "@testing-library/jest-dom": "^5.16.2",
