--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- 
+  "homepage": "https://ilyassoh.github.io/lyes-portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": false,
