--- a/package.json
+++ b/package.json
@@ -4,27 +4,32 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@popperjs/core": "2.11.8",
     "@react-pdf/renderer": "^2.3.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.7",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "5.3.2",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.469.0",
     "pdfjs-dist": "^3.4.120",
-    "react": "^18.3.1",
+    "react": "18.2.0",
     "react-activity-calendar": "^2.7.1",
     "react-bootstrap": "^2.2.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.2.0",
     "react-github-calendar": "^4.5.1",
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.42",
     "react-pdf": "^6.2.2",
     "react-rounded-image": "^2.0.15",
-    "react-router-dom": "^6.2.2",
+    "react-router": "6.20.0",
+    "react-router-dom": "6.20.0",
     "react-scripts": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "react-tsparticles": "^1.42.2",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
